applications/apps/confluence2/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: confluence
  namespace: confluence
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`conf.${ARGOCD_ENV_DOMAIN_NET}`)
      kind: Rule
      services:
        - name: confluence
          port: 8090
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: confluence-sync
  namespace: confluence
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`conf.${ARGOCD_ENV_DOMAIN_NET}`) && PathPrefix(`/synchrony/`)
      kind: Rule
      services:
        - name: confluence-synchrony
          port: 8091
  tls: {}
